-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.1
-
None
-
MacBook Pro m1, Qt 6.6.1 open source
-
-
c81e31461fd5a5bd2fe959f26b2e6d134b9a71e9, 75a918d48 (dev), 1e0a6b316 (6.7), b97d45c99 (6.6), 4b65b369c (tqtc/lts-6.5), aacf2ec03 (6.6.2)
Application crashes when instantiating a QComboBox, then calling QComboBox::clear() followed by QComboBox::addItem(const QString&, const QVariant&).
I can also reproduce with QComboBox::addItems(const QStringList&)
- is duplicated by
-
QTBUG-121008 Crash in QMacAccessibilityElement when using QTreeView/QCombobox
-
- Closed
-
| For Gerrit Dashboard: QTBUG-120469 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 528336,1 | QCocoaA11Y: (re)populate table array (rows) | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 530822,4 | QCocoaA(11)y: do not try to access an element if rowIndex == -1 | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 534034,2 | QCocoaA(11)y: do not try to access an element if rowIndex == -1 | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 534117,2 | QCocoaA(11)y: do not try to access an element if rowIndex == -1 | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 534386,2 | QCocoaA(11)y: do not try to access an element if rowIndex == -1 | 6.6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
| 534389,2 | QCocoaA(11)y: do not try to access an element if rowIndex == -1 | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |